для вёрстки статей

--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -191,8 +191,8 @@
       <section class="W_CraftContent -Left">
         <div class="O_CraftBlockTechnique">
           <div class="M_CraftBodyTexts -Left200">
-            <h2 class="A_CraftBodySubtitle">Техника</h2>
-            <p class="A_CraftBodyText -w580">
+            <h2 class="A_CraftBodySubtitle">Техника изготовления</h2>
+            <p class="A_CraftBodyText -w680">
               Основной материал&nbsp;&mdash; клык моржа, иногда зуб кашалота.
               Верхний слой обрабатывается ножом, скребком, напильником, пока его
               поверхность не&nbsp;станет белой и&nbsp;гладкой. Также мастера
@@ -200,36 +200,75 @@
             </p>
           </div>
 
-          <div class="W_CraftSliderNote">
-            <div class="M_CraftSlider">
-              <div class="A_CraftSliderArrows">
-                <div class="Q_Icon -ArrowLeft -size48x48"></div>
-                <div class="Q_SliderImages">
+          <div class="W_SliderWithDescription">
+            <div class="A_SliderArrows">
+              <div class="Q_Icon -ArrowLeft -size48x48"></div>
+
+              <div class="A_SliderImage">
+                <div class="W_SliderRails">
                   <img
-                    class="Q_CraftBodyImage -w680"
+                    class="Q_SliderPic"
                     src="../images/craft/uelen-bone-carving/slider-img1.jpg"
                     alt=""
                   />
+                  <img
+                    class="Q_SliderPic"
+                    src="../images/craft/uelen-bone-carving/slider-img2.jpg"
+                    alt=""
+                  />
+                  <img
+                    class="Q_SliderPic"
+                    src="../images/craft/uelen-bone-carving/slider-img3.jpg"
+                    alt=""
+                  />
+                  <img
+                    class="Q_SliderPic"
+                    src="../images/craft/uelen-bone-carving/slider-img4.jpg"
+                    alt=""
+                  />
                 </div>
-                <div class="Q_Icon -ArrowRight -size48x48"></div>
               </div>
-
-              <div class="C_IconsSliderPoint">
-                <div class="Q_Icon -Point -size6x6"></div>
-                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
-                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
-                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
-                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
-              </div>
+              <div class="Q_Icon -ArrowRight -size48x48"></div>
             </div>
 
-            <div class="M_CraftBodyNote -w280">
-              <h4 class="A_CraftBodyNoteTitle">1 этап</h4>
-              <p class="A_CraftBodyText">
-                Добытый материал обрабатывается с&nbsp;помощью тут что-то
-                написано о&nbsp;поэтапной технике изготовления изделий первый
-                этап здесь
-              </p>
+            <div class="M_SliderDescription">
+              <div class="W_SliderDescriptionRails">
+                <div class="W_SliderDescriptionTexts">
+                  <p class="A_SliderDescriptionCounter">этап 1/4</p>
+                  <p class="A_CraftBodyText -w780">
+                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
+                    написано о&nbsp;поэтапной технике изготовления изделий
+                    первый этап здесь
+                  </p>
+                </div>
+
+                <div class="W_SliderDescriptionTexts">
+                  <p class="A_SliderDescriptionCounter">этап 2/4</p>
+                  <p class="A_CraftBodyText -w780">
+                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
+                    написано о&nbsp;поэтапной технике изготовления изделий
+                    второй этап здесь
+                  </p>
+                </div>
+
+                <div class="W_SliderDescriptionTexts">
+                  <p class="A_SliderDescriptionCounter">этап 3/4</p>
+                  <p class="A_CraftBodyText -w780">
+                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
+                    написано о&nbsp;поэтапной технике изготовления изделий
+                    третий этап здесь
+                  </p>
+                </div>
+
+                <div class="W_SliderDescriptionTexts">
+                  <p class="A_SliderDescriptionCounter">этап 4/4</p>
+                  <p class="A_CraftBodyText -w780">
+                    Добытый материал обрабатывается с&nbsp;помощью тут что-то
+                    написано о&nbsp;поэтапной технике изготовления изделий
+                    четвёртый этап здесь
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -239,15 +278,24 @@
 
           <ul class="C_CraftBodyListItems">
             <li class="A_CraftBodyListItem">
-              <a href="#">Музей (с краткой информацией и ссылкой)</a>
+              <a href="#" target="_blank"
+                >Музейный комплекс имени И.&nbsp;Я.&nbsp;Словцова
+                в&nbsp;Тюмени</a
+              >
             </li>
 
             <li class="A_CraftBodyListItem">
-              <a href="#">Музей (с краткой информацией и ссылкой)</a>
+              <a href="https://www.orientmuseum.ru/" target="_blank"
+                >Государственный музей Востока в&nbsp;Москве</a
+              >
             </li>
 
             <li class="A_CraftBodyListItem">
-              <a href="#">Мастерская (с краткой информацией и ссылкой)</a>
+              <a
+                href="https://yandex.ru/maps/org/tsentr_razvitiya_narodnykh_promyslov_uelenskaya_kostoreznaya_masterskaya/127666585867/?ll=-169.865207%2C66.171677&z=11.87"
+                target="_blank"
+                >Уэленская косторезная мастерская</a
+              >
             </li>
           </ul>
         </div>
@@ -319,7 +367,7 @@
               </p>
             </div>
 
-            <div class="M_CraftSource">
+            <!-- <div class="M_CraftSource">
               <h4 class="A_CraftSourceTitle">Источники</h4>
               <div class="C_CraftSourceLinks">
                 <a class="A_CraftSourceLink" href="#"
@@ -333,7 +381,7 @@
                 >
                 <a class="A_CraftSourceLink" href="#">Печатное издание</a>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
