--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@
       </section>
     </div>
 
-    <!-- <a href="/" id="random-link">случайная ссылка</a> -->
+    <a href="/" id="random-link">случайная ссылка</a>
 
     <div class="O_Footer">
       <div class="M_FooterNav">
