--- a/src/crafts.html
+++ b/src/crafts.html
@@ -154,11 +154,7 @@
           <p class="A_CraftsCardTitle">Абашевская игрушка</p>
         </a>
 
-        <a
-          class="M_CraftsCard"
-          data-tags="Роспись"
-          href="./crafts/Rakul-painting.html"
-        >
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <img
             class="A_CraftsCardPic"
             src="images/crafts/Mezen-painting.jpg"
