--- a/src/index.html
+++ b/src/index.html
@@ -85,16 +85,24 @@
         <h2 class="A_MainPageSectionTitle">Популярные статьи</h2>
 
         <div class="C_CraftsCards">
-          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+          <a
+            class="M_CraftsCard"
+            data-tags="Кость,Резьба"
+            href="./crafts/uelen-bone-carving.html"
+          >
             <img
               class="A_CraftsCardPic"
-              src="images/crafts/Volkhov-painting.jpg"
-              alt="Волховская роспись"
+              src="images/crafts/Uelen-bone-carving.jpg"
+              alt="Уэленская резьба по кости"
             />
-            <p class="A_CraftsCardTitle">Волховская роспись</p>
+            <p class="A_CraftsCardTitle">Уэленская резьба по&nbsp;кости</p>
           </a>
 
-          <a class="M_CraftsCard" data-tags="Глина (керамика)" href="./crafts/skopinsk-ceramic.html">
+          <a
+            class="M_CraftsCard"
+            data-tags="Глина (керамика)"
+            href="./crafts/skopinsk-ceramic.html"
+          >
             <img
               class="A_CraftsCardPic"
               src="images/crafts/Skopinsk-ceramics.jpg"
@@ -103,13 +111,17 @@
             <p class="A_CraftsCardTitle">Cкопинская керамика</p>
           </a>
 
-          <a class="M_CraftsCard" data-tags="Текстиль" href="#">
+          <a
+            class="M_CraftsCard"
+            data-tags="Текстиль"
+            href="./crafts/tverskaya-lace.html"
+          >
             <img
               class="A_CraftsCardPic"
-              src="images/crafts/Tabasaran-carpet.jpg"
-              alt="Табасаранские ковры"
+              src="images/crafts/tverskaya-lace.jpg"
+              alt="Вологодское кружево"
             />
-            <p class="A_CraftsCardTitle">Табасаранские ковры</p>
+            <p class="A_CraftsCardTitle">Тверская вышивка</p>
           </a>
         </div>
       </section>
@@ -140,11 +152,15 @@
         </div>
       </section>
 
-      <section class="O_MainPageCards">
+      <!-- <section class="O_MainPageCards">
         <h2 class="A_MainPageSectionTitle">Может быть инетересно</h2>
 
         <div class="C_CraftsCards">
-          <a class="M_CraftsCard" data-tags="Текстиль" href="./crafts/vologodskoe-lace.html">
+          <a
+            class="M_CraftsCard"
+            data-tags="Текстиль"
+            href="./crafts/vologodskoe-lace.html"
+          >
             <img
               class="A_CraftsCardPic"
               src="images/crafts/Vologda-lace.jpg"
@@ -162,7 +178,11 @@
             <p class="A_CraftsCardTitle">Вологодская хохлома</p>
           </a>
 
-          <a class="M_CraftsCard" data-tags="Роспись" href="./crafts/Rakul-painting.html">
+          <a
+            class="M_CraftsCard"
+            data-tags="Роспись"
+            href="./crafts/Rakul-painting.html"
+          >
             <img
               class="A_CraftsCardPic"
               src="images/crafts/Rakul-painting.jpg"
@@ -171,7 +191,7 @@
             <p class="A_CraftsCardTitle">Ракульская роспись</p>
           </a>
         </div>
-      </section>
+      </section> -->
 
       <section class="W_MainPageTeaserName">
         <h2 class="A_MainPageSectionTitle">Подборки по&nbsp;материалам</h2>
@@ -193,7 +213,7 @@
         </div>
       </section>
 
-      <section class="O_MainPageSubscribe">
+      <!-- <section class="O_MainPageSubscribe">
         <div class="M_MainPageSectionTexts">
           <h2 class="A_MainPageSectionTitle">Узнай больше о&nbsp;ремёслах</h2>
           <p class="A_MainPageDescription">
@@ -205,7 +225,7 @@
         <div class="O_PostInputField">
           <div class="A_PostInputText"></div>
         </div>
-      </section>
+      </section> -->
     </div>
 
     <!-- <a href="/" id="random-link">случайная ссылка</a> -->
